--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_configure">الضبط</string>
-    <string name="action_connect">اتصل</string>
+    <string name="action_connect">اتصال</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
     <string name="telegram_bot_subtitle">الرسالة %s</string>
     <string name="qs_error">خطأ في الإتصال</string>
-    <string name="qs_show_error">إظهار الخطأ</string>
-    <string name="action_refresh_circuits">تحديث المسارات</string>
-    <string name="quickstart">إتصال تلقائي</string>
+    <string name="qs_show_error">أظهِر الخطأ</string>
+    <string name="action_refresh_circuits">أنعش المسارات</string>
+    <string name="quickstart">الاتصال التلقائي</string>
     <string name="telegram">تيليجرام</string>
     <string name="manual_bridge">اختيار يدوي</string>
     <string name="email_bot_subtitle">البريد الإلكتروني %s</string>
-    <string name="web_bot_subtitle">زيارة %s</string>
+    <string name="web_bot_subtitle">زر %s</string>
     <string name="error_something_went_wrong">حدث خطأ ما</string>
     <string name="get_new_bridges">ابحث عن المزيد من الجسور</string>
-    <string name="remove_bridge">حذف عنوان الجسر</string>
-    <string name="action_save">حفظ</string>
-    <string name="action_cancel">إلغاﺀ</string>
-    <string name="action_disconnect">قطع الإتصال</string>
-    <string name="action_reconnect">إعادة الاتصال</string>
+    <string name="remove_bridge">احذف عنوان الجسر</string>
+    <string name="action_save">احفظ</string>
+    <string name="action_cancel">ألغِ</string>
+    <string name="action_disconnect">اقطع الاتصال</string>
+    <string name="action_reconnect">أعد الاتصال</string>
     <string name="action_try_again">حاول مجددًا</string>
-    <string name="action_protect_all_apps">تأمين جميع التطبيقات</string>
-    <string name="action_protect_this_app">تأمين هذا التطبيق</string>
-    <string name="state_disconnecting">جار قطع الاتصال</string>
-    <string name="state_disconnected">غير متصل</string>
+    <string name="action_protect_all_apps">احمِ جميع التطبيقات</string>
+    <string name="action_protect_this_app">احمِ هذا التطبيق</string>
+    <string name="state_disconnecting">جارِ قطع الاتصال</string>
+    <string name="state_disconnected">غير مُتّصل</string>
     <string name="app_routing_tor_apps">التطبيقات التي تستخدم تور</string>
     <string name="none">غير محدد</string>
     <string name="add_new_bridge">أضف جسور جديدة</string>
@@ -32,23 +32,23 @@
     <string name="help">مساعدة</string>
     <string name="app_routing_browsers">المتصفحات</string>
     <string name="app_name">تور VPN</string>
-    <string name="label_not_protected">غير مُؤمَّن</string>
-    <string name="action_start">تشغيل الشبكة الإفتراضية الخاصة</string>
-    <string name="action_stop">إيقاف الشبكة الإفتراضية الخاصة</string>
-    <string name="action_copy_logs">نسخ السجلات</string>
+    <string name="label_not_protected">غير محمي</string>
+    <string name="action_start">شغّل VPN</string>
+    <string name="action_stop">أوقف VPN</string>
+    <string name="action_copy_logs">انسخ السجلّات</string>
     <string name="state_connected">مُتّصل</string>
-    <string name="state_connecting">جار الاتصال…</string>
+    <string name="state_connecting">جارِ الاتصال…</string>
     <string name="app_routing_other_apps">التطبيقات الأخرى</string>
     <string name="apps">التطبيقات</string>
     <string name="connection">الاتصال</string>
     <string name="always_on_vpn">اتصال VPN دائم</string>
-    <string name="action_open_app">فتح %1$s</string>
+    <string name="action_open_app">افتح %1$s</string>
     <string name="apps_description_all_protected">كافة التطبيقات مُؤَمَّنة</string>
     <string name="stats_combined">↓%2$s %1$s/ثا - ↑%4$s %3$s/ثا</string>
     <string name="unknown">مجهول</string>
     <string name="circuits">المسارات</string>
     <string name="bridges">الجسور</string>
-    <string name="guide_got_it">عُلم</string>
+    <string name="guide_got_it">فهمت</string>
     <string name="current_bridge">الجسر الحالي</string>
     <string name="bridge_option_obfs4_built">obfs4 (مُدمج)</string>
     <string name="bridge_settings">إعدادات الجسر</string>
@@ -56,10 +56,10 @@
     <string name="bridge_addresses">عناوين الجسور</string>
     <string name="use_a_bridge">استخدم جسراً</string>
     <string name="bridge_address">أدخل عنوان الجسر</string>
-    <string name="connect_direct_to_tor">إتصال مباشر بتور</string>
+    <string name="connect_direct_to_tor">اتصل مباشرةً بتور</string>
     <string name="general">عام</string>
     <string name="down">الإستقبال</string>
-    <string name="idle_toolbar_title">الشبكة الافتراضية الخاصة بتور</string>
+    <string name="idle_toolbar_title">Tor VPN</string>
     <string name="debugging">التنقيح</string>
     <string name="snowflake">جسر Snowflake</string>
     <string name="appearance">المظهر</string>
@@ -70,12 +70,12 @@
     <string name="report_bug">أبلغ عن مُشكِلة</string>
     <string name="contact_support">اتصل بالدعم</string>
     <string name="email">البريد الإلكتروني</string>
-    <string name="start_again">إبدا من جديد</string>
-    <string name="tor_logs">سجلات تور Tor</string>
-    <string name="error_view_logs">عرض السجلات</string>
+    <string name="start_again">ابدأ من جديد</string>
+    <string name="tor_logs">سجلّات تور</string>
+    <string name="error_view_logs">اعرض سجلّات تور</string>
     <string name="up">الإرسال</string>
-    <string name="action_refresh">تحديث</string>
-    <string name="change">تغيير</string>
+    <string name="action_refresh">أنعش</string>
+    <string name="change">غيّر</string>
     <string name="tor_project">مشروع تور</string>
     <string name="about">عن</string>
     <string name="version">الاصدار</string>
@@ -85,56 +85,56 @@
     <string name="notification_channel_description">اعرض تحديثات تور VPN.</string>
     <string name="notification_channel_name">الإشعارات</string>
     <string name="apps_description">اختر التطبيقات لتوجيهها عبر تور</string>
-    <string name="always_on_vpn_description">قتح إعدادات نظام أندرويد</string>
+    <string name="always_on_vpn_description">افتح إعدادات نظام أندرويد</string>
     <string name="guide_bullet_head_1">الإبلاغ عن الأخطاء</string>
     <string name="guide_bullet_head_2">لا تفعل أي شيءٍ خطيرٍ</string>
     <string name="guide_bullet_text_1">لا تنسَ إبلاغ مطورينا بأي أخطاء تجدها.</string>
-    <string name="guide_bullet_text_2">هذه نسخة مسبقة من التطبيق، وليست آمنة للاستخدام في الأنشطة الحساسة.</string>
-    <string name="connection_description">ضبط كيفية الاتصال بشبكة تور</string>
-    <string name="kill_switch_description">حظر التطبيقات من الاتصال بالإنترنت إذا لم يكن من الممكن الوصول إلى شبكة تور</string>
+    <string name="guide_bullet_text_2">هذه نُسخة مسبقة من التطبيق، وليست آمنة للاستخدام في الأنشطة الحساسة.</string>
+    <string name="connection_description">اضبط كيفية الاتصال بشبكة تور</string>
+    <string name="kill_switch_description">امنع التطبيقات من الاتصال بالإنترنت إذا لم يكن من الممكن الوصول إلى شبكة تور</string>
     <string name="exit_location_automatic">عشوائيًا حسب المسار</string>
     <string name="tor_powered_app">تطبيق يستخدم شبكة تور</string>
-    <string name="description_independent_tor_powered_app">يستخدم هذا التطبيق اتصال تور الخاص به، مستقل عن Tor VPN. يمكنك عرض وتكوين اتصاله في %1$s بدلاً من ذلك.</string>
-    <string name="general_description">ضبط الإعدادات العامة</string>
+    <string name="description_independent_tor_powered_app">يستخدم هذا التطبيق اتصال تور الخاص به، مستقل عن Tor VPN. يمكنك عرض وتضبيط اتصاله في %1$s بدلاً من ذلك.</string>
+    <string name="general_description">اضبط الإعدادات العامة</string>
     <string name="title_guide">هذا التطبيق\nتجريبي للغاية</string>
     <string name="error_detail_message">تور VPN لم يتمكن من الاتصال بشبكة تور.</string>
     <string name="exit_location_description">أثناء استخدام تور، ستعتقد مواقع الويب والتطبيقات أنك تتصل من نفس البلد مثل نقطة خروجك، وهي القفزة النهائية في كل من مسارات تور الخاصة بك.</string>
-    <string name="circuit_app_description">مسار %1$s</string>
-    <string name="tor_logs_description">عرض ونسخ سجلات تور</string>
+    <string name="circuit_app_description">مسار ل %1$s</string>
+    <string name="tor_logs_description">اعرض وانسخ سجلّات تور الخاصة بك</string>
     <string name="quickstart_description">الاتصال بشبكة تور تلقائيًا عند التشغيل</string>
-    <string name="exit_location">حذف الموقع</string>
-    <string name="label_some_protected">البعض مُؤمَّن</string>
+    <string name="exit_location">موقع الخروج</string>
+    <string name="label_some_protected">البعض محمي</string>
     <string name="no_internet">لا يوجد انترنت</string>
-    <string name="up_content_description">تحميل</string>
+    <string name="up_content_description">رفع</string>
     <string name="reload_app_circuits">هل تريد تحديث هذا المسار؟</string>
-    <string name="action_reload_circuits">إعادة تحميل المسارات</string>
-    <string name="action_paste_bridges">الصق عنوان الجسر الخاصة بك هنا</string>
+    <string name="action_reload_circuits">أعد تحميل المسارات</string>
+    <string name="action_paste_bridges">ألصِق عنوان جسرك هنا</string>
     <string name="new_bridges_result">إليك جسورك الجديدة:</string>
     <string name="name_and_icon">الاسم والأيقونة</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: فشل: %3$s</string>
-    <string name="closed_connection">%1$s-&gt;%2$s: تم إغلاق الاتصال</string>
-    <string name="routed_over_country">تم التوجيه عبر %1$s</string>
+    <string name="closed_connection">%1$s-&gt;%2$s: أُغلِق الاتصال</string>
+    <string name="routed_over_country">وجَّه عبر %1$s</string>
     <string name="ask_bridge_bot">اطلب جسور</string>
     <string name="new_circuits_warnings">تحذيرات المسارات الجديدة</string>
     <string name="new_circuits_warnings_description">انذر قبل إعادة تحميل المسارات.</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="reload_app_circuits_description">سيتم إنشاء مسارات جديدة لهذا التطبيق فقط. قد لا تتعرف بعض التطبيقات والمواقع على هويتك نتيجة لذلك، وقد تقوم بتسجيل خروجك من خدماتها.</string>
-    <string name="obfs4_description">يخفي حركة مرورك كبيانات عشوائي</string>
-    <string name="fetching_bridges">جاري جلب جسور جديدة لك…</string>
+    <string name="obfs4_description">يُنكِّر حركة مرورك كبيانات عشوائية</string>
+    <string name="fetching_bridges">جارِ جلب جسور جديدة لك…</string>
     <string name="failed_connection">%1$s-&gt;%2$s: فشل الاتصال بـ %3$s: %4$s (التطبيق %5$d)</string>
-    <string name="bug_gitlab">على (القيت لاب) Gitlab</string>
+    <string name="bug_gitlab">على Gitlab</string>
     <string name="reload_all_circuits_description">سيتم إنشاء مسارات جديدة لجميع تطبيقاتك. قد لا تتعرف بعض التطبيقات والمواقع على هويتك نتيجة لذلك، وقد تقوم بتسجيل خروجك من خدماتها.</string>
     <plurals name="n_bridges">
         <item quantity="zero">لم تتم إضافة جسر %1$s</item>
-        <item quantity="one">تم إضافة جسر %1$s</item>
-        <item quantity="two">تم إضافة جسرين %1$s</item>
-        <item quantity="few">تم إضافة جسور %1$s</item>
-        <item quantity="many">تم إضافة جسور %1$s</item>
-        <item quantity="other">تم إضافة جسور %1$s</item>
+        <item quantity="one">أُضيف جسر</item>
+        <item quantity="two">أُضيف جسرين</item>
+        <item quantity="few">أُضيف %1$s جسور</item>
+        <item quantity="many">أُضيف %1$s جسر</item>
+        <item quantity="other">أُضيف %1$s جسر</item>
     </plurals>
-    <string name="launcher_hint">اختر أيقونة واسم لشاشتك الرئيسية وصندوق التطبيقات. ستظل الأيقونة والاسم الافتراضي لتطبيق Tor VPN مستخدمين في الإشعارات.</string>
+    <string name="launcher_hint">اختر أيقونة واسمًا ليتم عرضهما على شاشتك الرئيسية ودرج التطبيقات والإشعارات.</string>
     <string name="bridge_address_description">ألصِق عناوين جسر تعرفها بالفعل</string>
-    <string name="about_description_long">تور VPN هو تطبيق VPN تجريبي تم تطويره بواسطة %1$s، مطوري تور و متصفح تور—أقوى الأدوات في العالم للخصوصية والحرية على الإنترنت.</string>
+    <string name="about_description_long">تور VPN هو تطبيق VPN تجريبي طوِّر بواسطة %1$s، مطوري تور و متصفح تور—أقوى الأدوات في العالم للخصوصيّة والحرية على الإنترنت.</string>
     <string name="bug_tor_forum">على منتدى تور</string>
     <string name="new_bridges">أعطني جسورًا جديدة</string>
     <string name="bot_msg_welcome">أهلاً بك، أيها المسافر المتعب</string>
@@ -142,20 +142,20 @@
     <string name="bootstrap_at">تم التمهيد في: %1$s</string>
     <string name="new_connection">%1$s-&gt;%2$s: اتصال جديد إلى %3$s (التطبيق %4$d)</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: قفز %3$d: %4$s (%5$s)</string>
-    <string name="snowflake_built_in">جسر Snowflake (مدمج)</string>
-    <string name="view_faq">عرض الأسئلة الشائعة</string>
+    <string name="snowflake_built_in">جسر Snowflake (مُدمج)</string>
+    <string name="view_faq">اعرض الأسئلة الشائعة</string>
     <string name="bridge_bot">بوت الجسر</string>
     <string name="bot_msg_results">إليك جسورك</string>
-    <string name="refresh_all_circuits">هل تريد تحديث جميع المسارات؟</string>
+    <string name="refresh_all_circuits">هل تريد إنعاش جميع المسارات؟</string>
     <string name="help_description_wip">تور VPN هو مشروع قيد التطوير، وقد لا تعمل بعض الميزات كما هو متوقع.</string>
-    <string name="help_description_bug_report">إذا واجهت مشكلة لم تتم الإجابة عليها في الأسئلة الشائعة، يرجى فتح تقرير عن خطأ أو الاتصال بالدعم.</string>
+    <string name="help_description_bug_report">إذا واجهت مشكلة لم تتم الإجابة عليها في الأسئلة الشائعة، يُرجى فتح تقرير عن خطأ أو الاتصال بالدعم.</string>
     <string name="obfs4_bridge">جسر obfs4</string>
     <string name="about_description">اكتشف المزيد عن الشبكة الإفتراضية الخاصة بتور VPN</string>
     <string name="down_content_description">تنزيل</string>
     <string name="current_state">الوضع الحالي:</string>
     <string name="whatsapp">واتساب (WhatsApp)</string>
     <string name="use_a_bridge_info">تساعدك الجسور على الوصول بأمان إلى شبكة تور في الأماكن التي يُحظر فيها تور. اعتمادًا على مكان وجودك، قد يعمل أحد الجسور بشكل أفضل من الآخر.</string>
-    <string name="snowflake_description">يخفي حركة مرورك كمكالمة فيديو</string>
+    <string name="snowflake_description">يُنكِّر حركة مرورك كمكالمة فيديو</string>
     <string name="get_new_bridges_description">بما أن عناوين الجسور غير عامة، ستحتاج إلى طلب واحد من مشروع تور.</string>
     <string name="use_bridges">احفظ الجسور</string>
     <string name="exit_location_safest">آمن للغاية</string>
@@ -166,7 +166,7 @@
     <string name="privacy_policy">سياسة الخصوصية</string>
     <string name="open_source_licenses">تراخيص مفتوحة المصدر</string>
     <string name="app_icon">أيقونة التطبيق</string>
-    <string name="connect_automatically">الأتصال تلقائيا</string>
+    <string name="connect_automatically">الأتصال تلقائيًا</string>
     <string name="connect_automatically_description">الاتصال بشبكة تور تلقائيًا عند التشغيل</string>
     <string name="about_tor_vpn">عن Tor VPN</string>
     <string name="default_icon_and_name">الأيقونة والاسم الافتراضي</string>
@@ -177,4 +177,22 @@
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="copied_clipboard">نُسخت إلى الحافظة</string>
     <string name="add_bridge">أضِف جسور</string>
+    <string name="view_support_docs">اعرض مستندات الدعم</string>
+    <string name="app_name_garden">حديقة</string>
+    <string name="app_name_weather">الطقس</string>
+    <string name="app_name_pingpong">كرة الطاولة</string>
+    <string name="about_support_title">صنع بواسطة منظمة غير ربحية</string>
+    <string name="about_support_description">نعتمد على مؤيدين مثلك لمساعدتنا في الحفاظ على تور قويًا وآمنًا لملايين الأشخاص حول العالم.</string>
+    <string name="about_support_action">تبرّع اﻵن</string>
+    <string name="beta_intro">أهلاً بك في النسخة التجريبية. قبل أن تبدأ، هناك بعض الأمور التي يجب أن تعرفها:</string>
+    <string name="beta_test_thoroughly">اختبر بدقة</string>
+    <string name="beta_test_description">هذا إصدار وصول مبكر مخصص للاختبار والملاحظات.</string>
+    <string name="beta_risks">اعرف المخاطر</string>
+    <string name="beta_risks_description">قد تسرب الإصدارات التجريبية معلومات، ويجب عدم استخدامها للأنشطة الحساسة.</string>
+    <string name="how_to_report_bugs">كيفية الإبلاغ عن العلل</string>
+    <string name="external_link">رابط خارجي</string>
+    <string name="start_testing">ابدأ الاختبار</string>
+    <string name="learn_more">تعلم المزيد</string>
+    <string name="beta_report_bugs">أبلغ عن علل</string>
+    <string name="beta_report_bugs_description">يمكنك المساعدة عن طريق إبلاغ مطورينا بأي علل تجدها.</string>
 </resources>
