--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -40,7 +40,7 @@
     <string name="state_disconnected">Не е свързано</string>
     <string name="action_configure">Настройки</string>
     <string name="action_connect">Свързване</string>
-    <string name="action_disconnect">Прекъсни връзката</string>
+    <string name="action_disconnect">Изключване</string>
     <string name="app_routing_browsers">Браузъри</string>
     <string name="app_routing_other_apps">Други приложения</string>
     <string name="apps">Приложения</string>
@@ -81,7 +81,7 @@
     <string name="refresh_all_circuits">Обновяване на веригите?</string>
     <string name="routed_over_country">Пренасочен през %1$s</string>
     <string name="connect_direct_to_tor">Свържете се директно с Тор</string>
-    <string name="built_in_bridges">Изберете вграден мост</string>
+    <string name="built_in_bridges">Вашите мостове</string>
     <string name="add_new_bridge">Добавете нови мостове</string>
     <string name="get_new_bridges_description">Тъй като мостовите адреси не са публични, ще трябва да поискате такъв от проета Тор.</string>
     <string name="telegram_bot_subtitle">Съобщение %s</string>
@@ -91,22 +91,22 @@
     <string name="launcher_hint">Изберете икона и име за вашия начален екран и чекмедже за приложения. Иконата и името на Тор ВЧМ по подразбиране все още ще се използват в известията.</string>
     <string name="bug_gitlab">На Gitlab</string>
     <string name="obfs4_bridge">obfs4 мост</string>
-    <string name="get_new_bridges">Вземете нови мостове</string>
-    <string name="ask_bridge_bot">Попитайте бота на моста</string>
+    <string name="get_new_bridges">Намиране на още мостове</string>
+    <string name="ask_bridge_bot">Поискайте мостове</string>
     <string name="quickstart">Автоматично свързване</string>
     <string name="action_reload_circuits">Презареждане на вериги</string>
     <string name="circuits">Вериги</string>
     <string name="idle_toolbar_title">Тор ВЧМ</string>
-    <string name="new_bridges">Нуждая се от нови мостове</string>
+    <string name="new_bridges">Искам нови мостове</string>
     <string name="fetching_bridges">Новите ви мостове се извличат…</string>
     <string name="new_bridges_result">Ето ги новите ви мостове:</string>
-    <string name="bot_msg_results">Ето вашите мостове:</string>
-    <string name="use_bridges">Използвай мостове</string>
+    <string name="bot_msg_results">Ето вашите мостове</string>
+    <string name="use_bridges">Запазване на мостове</string>
     <string name="label_not_protected">Нито една не е защитена</string>
-    <string name="app_name">Тор ВЧМ</string>
-    <string name="action_protect_all_apps">Защити всички приложения</string>
+    <string name="app_name">ВЧМ на Tor</string>
+    <string name="action_protect_all_apps">Защитаване на приложенията</string>
     <string name="action_copy_logs">Копирай лог файловете</string>
-    <string name="action_protect_this_app">Защити това приложение</string>
+    <string name="action_protect_this_app">Защитаване на приложението</string>
     <string name="general_description">Настройване на общи настройки</string>
     <string name="title_guide">Това приложение е \nекспериментално</string>
     <string name="guide_bullet_text_1">Не забравяйте да докладвате на нашите разработчици всички грешки, които откриете.</string>
@@ -125,11 +125,11 @@
     <string name="failed_connection">%1$s-&gt;%2$s: НЕУСПЕШНО свързване до %3$s: %4$s (app %5$d)</string>
     <string name="reload_app_circuits">Опресняване на тази верига?</string>
     <string name="reload_app_circuits_description">Нови вериги ще бъдат установени само за това приложение. В резултат на това някои приложения и уебсайтове може да не ви разпознаят и да излезете от техните услуги.</string>
-    <string name="obfs4_description">Прави трафика ви да изглежда като произволни данни</string>
-    <string name="snowflake_description">Насочва връзката ви през прокси сървъри на Сноуфлейк, за да изглежда, че провеждате видео разговор</string>
+    <string name="obfs4_description">Маскира трафика ви като случайни данни</string>
+    <string name="snowflake_description">Маскира трафика ви като видео разговор</string>
     <string name="snowflake_built_in">Сноуфлейк (вградена)</string>
     <string name="bridge_address">Добави адрес на моста</string>
-    <string name="bridge_address_description">Добавете един или повече мостове, предоставени от доверено лице или организация.</string>
+    <string name="bridge_address_description">Въведете адресите на мостове, които вече знаете</string>
     <string name="action_paste_bridges">Поставете вашите мостови адреси тук</string>
     <string name="whatsapp">Whatsapp</string>
     <string name="reload_all_circuits_description">Ще бъдат установени нови вериги за всички ваши приложения. В резултат на това някои приложения и уебсайтове може да не ви разпознаят и да излезете от техните услуги.</string>
@@ -165,4 +165,16 @@
     <string name="stats_down" translatable="false">%1$s</string>
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="stats_up" translatable="false">%1$s</string>
+    <string name="app_name_garden">Garden</string>
+    <string name="copied_clipboard">Копирано</string>
+    <string name="add_bridge">Добавяне на мостове</string>
+    <string name="app_name_weather">Weather</string>
+    <string name="app_name_pingpong">Ping Pong</string>
+    <string name="app_routing_show_apps">Показване на %1$s приложения</string>
+    <string name="app_routing_hide_apps">Скриване на %1$s приложения</string>
+    <string name="about_tor_vpn">Относно ВЧМ на Tor</string>
+    <string name="default_icon_and_name">Подразбирана пиктограна и име</string>
+    <string name="no_bridge">Не се използват мостове</string>
+    <string name="view_support_docs">Преглед на документацията</string>
+    <string name="the_internet">Интернет</string>
 </resources>
