--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -22,15 +22,15 @@
     <string name="appearance">Aparência</string>
     <string name="warnings">Avisos</string>
     <string name="qs_show_error">Mostrar erro</string>
-    <string name="action_save">Salve</string>
+    <string name="action_save">Guardar</string>
     <string name="action_connect">Ligar</string>
     <string name="action_cancel">Cancelar</string>
-    <string name="action_disconnect">Desconectar</string>
-    <string name="action_reconnect">Reconectar</string>
+    <string name="action_disconnect">Desligar</string>
+    <string name="action_reconnect">Religar</string>
     <string name="action_try_again">Tente novamente</string>
     <string name="action_start">Iniciar VPN</string>
-    <string name="state_connected">Conectado</string>
-    <string name="state_connecting">Conectando…</string>
+    <string name="state_connected">Ligado</string>
+    <string name="state_connecting">A ligar…</string>
     <string name="state_disconnected">Desligado</string>
     <string name="debugging">Depuração</string>
     <string name="action_configure">Configurar</string>
@@ -43,7 +43,7 @@
     <string name="email">E-mail</string>
     <string name="apps">Aplicações</string>
     <string name="tor_logs">Registos do Tor</string>
-    <string name="action_refresh">Recarregar</string>
+    <string name="action_refresh">Atualizar</string>
     <string name="change">Alterar</string>
     <string name="bridge_addresses">Endereços de ponte</string>
     <string name="email_providers">Gmail ou Riseup</string>
@@ -66,7 +66,7 @@
     <string name="obfs4_built_in">obfs4 (incorporado)</string>
     <string name="add_new_bridge">Adicionar novas pontes</string>
     <string name="get_new_bridges_description">Uma vez que os endereços de ponte não são públicos, terá de solicitar um ao Projeto Tor.</string>
-    <string name="use_bridges">Usar pontes</string>
+    <string name="use_bridges">Guardar pontes</string>
     <string name="email_bot_subtitle">E-mail %s</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="up_content_description">Enviar</string>
@@ -100,7 +100,7 @@
     <string name="web_bot_subtitle">Visitar %s</string>
     <string name="bridge_bot">Robô de Ponte</string>
     <string name="app_routing_hide_apps">Ocultar %1$s aplicações</string>
-    <string name="bot_msg_results">Aqui estão as suas pontes:</string>
+    <string name="bot_msg_results">Aqui estão as suas pontes</string>
     <string name="quickstart">Ligar Automaticamente</string>
     <string name="guide_bullet_head_1">Reportar Erros</string>
     <string name="label_some_protected">Algumas protegidas</string>
@@ -113,18 +113,18 @@
     <string name="app_routing_show_apps">Mostrar %1$s aplicações</string>
     <string name="snowflake_built_in">Snowflake (incorporado)</string>
     <string name="action_refresh_circuits">Atualizar circuitos</string>
-    <string name="connection_description">Configurar como se ligar ao Tor</string>
+    <string name="connection_description">Configurar como ligar ao Tor</string>
     <string name="label_not_protected">Nenhuma protegida</string>
     <string name="this_app">Esta aplicação</string>
     <string name="current_state">Estado atual:</string>
-    <string name="action_paste_bridges">Colar aqui os seus endereços de ponte</string>
+    <string name="action_paste_bridges">Cole aqui os seus endereços de ponte</string>
     <string name="fetching_bridges">A obter as suas novas pontes…</string>
     <string name="default_icon_and_name">Ícone e nome predefinido</string>
     <string name="launcher_hint">Escolha um ícone e nome para o ecrã inicial e menu de aplicações. O ícone e o nome predefinido do Tor VPN ainda serão usados nas notificações.</string>
     <string name="general_description">Configurar definições gerais</string>
     <string name="new_bridges">Eu preciso de novas pontes</string>
     <string name="app_icon">Ícone da Aplicação</string>
-    <string name="about_tor_vpn">Sobre o TorVPN</string>
+    <string name="about_tor_vpn">Sobre TorVPN</string>
     <string name="action_stop">Parar VPN</string>
     <string name="telegram_bot_subtitle">Mensagem %s</string>
     <string name="exit_location_description">Enquanto usar o Tor, os sites da Web e as aplicações pensarão que está a ligar-se do mesmo país que a sua retransmissão de saída, que é o salto final em cada um dos seus circuitos Tor.</string>
@@ -155,7 +155,7 @@
     <string name="new_circuits_warnings">Novos avisos de circuitos</string>
     <string name="the_internet">A Internet</string>
     <string name="bug_tor_forum">No Fórum do Tor</string>
-    <string name="connect_automatically_description">Ligar à rede Tor automaticamente quando iniciado</string>
+    <string name="connect_automatically_description">Ligar à rede Tor automaticamente quando iniciada</string>
     <string name="routed_over_country">Roteado sobre %1$s</string>
     <string name="help_description_bug_report">Se encontrar um problema que não está respondio na nossa FAQ, por favor, abra um relatório de erro ou contacte o apoio.</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: salto %3$d: %4$s (%5$s)</string>
@@ -171,5 +171,11 @@
     <string name="reload_all_circuits_description">Os novos circuitos serão estabelecidos para todas as suas aplicações. Algumas aplicações e sites da Web podem não reconhecê-lo como resultado, e podem desligá-lo dos seus serviços.</string>
     <string name="exit_location_automatic">Aleatório por circuito</string>
     <string name="closed_connection">%1$s-&gt;%2$s: ligação fechada</string>
-    <string name="guide_bullet_text_2">Esta é uma versão de pré-lançamento da aplicação e não é segura para o uso em atividades confidenciais.</string>
+    <string name="guide_bullet_text_2">Esta é uma versão de pré-lançamento da aplicação e não é segura para usar em atividades confidenciais.</string>
+    <string name="copied_clipboard">Copiado para a área de transferência</string>
+    <string name="add_bridge">Adicionar pontes</string>
+    <string name="view_support_docs">Ver documentos de apoio</string>
+    <string name="app_name_weather">Tempo</string>
+    <string name="app_name_garden">Jardim</string>
+    <string name="app_name_pingpong">Ping pong</string>
 </resources>
