--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="apps_description_all_protected">Усі захищені застосунки</string>
+    <string name="apps_description_all_protected">Усі застосунки захищені</string>
     <string name="apps">Застосунки</string>
     <string name="action_stop">Зупинити VPN</string>
     <string name="action_refresh_circuits">Оновити схеми</string>
     <string name="state_connected">Під\'єднано</string>
     <string name="guard">Сторожовий</string>
     <string name="connection">З\'єднання</string>
-    <string name="kill_switch">Вимкнути перемикач</string>
+    <string name="kill_switch">Аварійне вимкнення</string>
     <string name="this_browser">Цей браузер</string>
     <string name="this_app">Цей застосунок</string>
     <string name="action_open_app">Відкрити %1$s</string>
     <string name="app_name">Tor VPN</string>
     <string name="action_configure">Налаштувати</string>
-    <string name="action_connect">Під\'єднати</string>
+    <string name="action_connect">Під\'єднатися</string>
     <string name="action_cancel">Скасувати</string>
-    <string name="action_disconnect">Від\'єднати</string>
-    <string name="action_reconnect">Під\'єднати повторно</string>
+    <string name="action_disconnect">Від\'єднатися</string>
+    <string name="action_reconnect">Перепід\'єднатися</string>
     <string name="action_try_again">Повторити спробу</string>
     <string name="action_protect_all_apps">Захистити всі застосунки</string>
-    <string name="action_protect_this_app">Захистити всі застосунки</string>
+    <string name="action_protect_this_app">Захистити цей застосунок</string>
     <string name="action_start">Запустити VPN</string>
     <string name="action_copy_logs">Копіювати журнали</string>
     <string name="state_connecting">Зʼєднання…</string>
@@ -31,7 +31,7 @@
     <string name="notification_channel_description">Показує оновлення про TorVPN.</string>
     <string name="notification_channel_name">Сповіщення TorVPN</string>
     <string name="tor_logs">Журнали Tor</string>
-    <string name="tor_logs_description">Переглянути та копіювати ваші журнали Tor</string>
+    <string name="tor_logs_description">Переглянути та копіювати журнали Tor</string>
     <string name="always_on_vpn">Постійна VPN</string>
     <string name="always_on_vpn_description">Відкрити системні налаштування Android</string>
     <string name="guide_bullet_head_1">Звіт про помилки</string>
@@ -41,28 +41,28 @@
     <string name="failed_connection">%1$s-&gt;%2$s: НЕ ВДАЛОСЯ під\'єднатися до %3$s: %4$s (застосунок %5$d)</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: НЕВДАЛО: %3$s</string>
     <string name="reload_app_circuits">Оновити цю схему?</string>
-    <string name="up">Догори</string>
+    <string name="up">Вивантажено</string>
     <string name="routed_over_country">Спрямовано через %1$s</string>
     <string name="stats_combined">↓%2$s %1$s/с - ↑%4$s %3$s/с</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="circuits">Схеми</string>
     <string name="guide_got_it">Зрозуміло</string>
-    <string name="connection_description">Конфігурування під\'єднання до Tor</string>
-    <string name="label_not_protected">Жодного не захищено</string>
+    <string name="connection_description">Налаштування під\'єднання до Tor</string>
+    <string name="label_not_protected">Жоден не захищено</string>
     <string name="unknown">Невідомо</string>
     <string name="reload_all_circuits_description">Для всіх ваших застосунків буде створено нові схеми. Деякі застосунки та вебсайти можуть не впізнати вас та ініціюють вихід з їхніх служб.</string>
-    <string name="exit_location_automatic">Випадкова на схему</string>
+    <string name="exit_location_automatic">Випадково на схему</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: пересилання %3$d: %4$s (%5$s)</string>
     <string name="closed_connection">%1$s-&gt;%2$s: закрите з\'єднання</string>
     <string name="stats_down" translatable="false">%1$s</string>
-    <string name="exit_location_description">Під час використання Tor веб-сайти та програми вважатимуть, що ви підключаєтеся з тієї ж країни, що й вихідний ретранслятор, який є останнім стрибком у кожному з ваших каналів Tor.</string>
-    <string name="down">Вниз</string>
-    <string name="tor_powered_app">Застосунок на базі Tor</string>
+    <string name="exit_location_description">Під час використання Tor веб-сайти та програми вважатимуть, що ви під\'єднуєтеся з тієї ж країни, що й вихідний ретранслятор, який є останнім стрибком у кожному з ваших каналів Tor.</string>
+    <string name="down">Завантажено</string>
+    <string name="tor_powered_app">Застосунок на основі Tor</string>
     <string name="error_something_went_wrong">Щось пішло не так</string>
     <string name="stats_delta">%1$s/с</string>
     <string name="exit_location">Розташування виходу</string>
     <string name="connect_direct_to_tor">Під\'єднано безпосередньо до Tor</string>
-    <string name="quickstart">Автоз\'єднання</string>
+    <string name="quickstart">Автопід\'єднання</string>
     <string name="quickstart_description">Під\'єднуватися до мережі Tor автоматично під час запуску</string>
     <string name="error_detail_message">Tor VPN не вдалося під\'єднатися до мережі Tor.</string>
     <string name="circuit_app_description">Схема для %1$s</string>
@@ -73,7 +73,7 @@
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="action_reload_circuits">Перезавантажити схеми</string>
     <string name="title_guide">Цей застосунок \nекспериментальний</string>
-    <string name="guide_bullet_text_2">Це рання версія застосунку, і її небезпечно використовувати для конфіденційних дій.</string>
+    <string name="guide_bullet_text_2">Це попередня передвипускова версія застосунку, тому її небезпечно використовувати для конфіденційних дій.</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
     <string name="use_a_bridge_info">Мости допомагають безпечно отримати доступ до мережі Tor в місцях, де Tor заблоковано. Залежно від того, де ви перебуваєте, один міст може працювати краще, ніж інший.</string>
     <string name="bridge_option_obfs4_built">obfs4 (вбудований)</string>
@@ -102,7 +102,7 @@
     <string name="bridge_address_description">Вставте адреси мостів, які ви вже знаєте</string>
     <string name="snowflake_description">Маскує ваш трафік під відеодзвінок</string>
     <string name="manual_bridge">Вибір вручну</string>
-    <string name="description_independent_tor_powered_app">Цей застосунок використовує власне Tor-з\'єднання, незалежне від Tor VPN. Натомість переглядайте та налаштовуйте його з\'єднання в %1$s.</string>
+    <string name="description_independent_tor_powered_app">Цей застосунок використовує власне Tor-з\'єднання, незалежне від Tor VPN. Натомість переглядайте та налаштуйте його з\'єднання в %1$s.</string>
     <string name="email_providers">Gmail або Riseup</string>
     <string name="telegram_bot_subtitle">Повідомлення %s</string>
     <string name="remove_bridge">Вилучити адреси мостів</string>
@@ -113,7 +113,7 @@
     <string name="get_new_bridges_description">Оскільки адреси мостів не загальнодоступні, вам потрібно звернутися по них до проєкту Tor.</string>
     <string name="label_some_protected">Деякі захищено</string>
     <string name="ask_bridge_bot">Запит мостів</string>
-    <string name="get_new_bridges">Знайди більше мостів</string>
+    <string name="get_new_bridges">Знайти більше мостів</string>
     <string name="help">Довідка</string>
     <string name="qs_error">Помилка з’єднання</string>
     <string name="qs_show_error">Показати помилку</string>
@@ -122,7 +122,7 @@
     <string name="general">Загальні</string>
     <string name="appearance">Зовнішній вигляд</string>
     <string name="warnings">Попередження</string>
-    <string name="signal">Сигнал</string>
+    <string name="signal">Signal</string>
     <string name="report_bug">Повідомити про помилку</string>
     <string name="email">Пошта</string>
     <string name="contact_support">Звернутися до служби підтримки</string>
@@ -137,12 +137,12 @@
     <string name="tor_project">Проєкт Tor</string>
     <string name="general_description">Змінити загальні налаштування</string>
     <string name="no_internet">Немає інтернету</string>
-    <string name="apps_description">Виберіть програми для маршрутизації через Tor</string>
-    <string name="launcher_hint">Виберіть піктограму та назву для головного екрана та панелі програм. Значок і назва Tor VPN за замовчуванням все ще використовуватимуться в сповіщеннях.</string>
+    <string name="apps_description">Виберіть застосунки для маршрутизації через Tor</string>
+    <string name="launcher_hint">Виберіть піктограму та назву, які показуватимуться на головному екрані, у панелі програм та сповіщеннях.</string>
     <string name="help_description_bug_report">Якщо ви зіткнулися з проблемою, відповіді на яку немає в наших поширених запитаннях, відкрийте звіт про помилку або зверніться до служби підтримки.</string>
     <string name="view_faq">Перегляньте наші поширені запитання</string>
-    <string name="name_and_icon">Назва та значок</string>
-    <string name="about_description_long">Tor VPN — це експериментальна програма VPN, створена %1$s, розробниками Tor і Tor Browser — найпотужніших у світі інструментів для конфіденційності та свободи в Інтернеті.</string>
+    <string name="name_and_icon">Назва та піктограма</string>
+    <string name="about_description_long">Tor VPN — це експериментальний застосунок VPN, створений %1$s, розробниками Tor і браузера Tor — найпотужніших у світі інструментів для конфіденційності та свободи в Інтернеті.</string>
     <string name="new_circuits_warnings">Попередження про нові схеми</string>
     <string name="refresh_all_circuits">Оновити всі схеми?</string>
     <string name="new_bridges">Дайте мені нові мости</string>
@@ -156,23 +156,41 @@
     <string name="bot_msg_welcome">Ласкаво просимо, втомлений подорожній</string>
     <string name="bot_msg_results">Ось ваші мости</string>
     <string name="down_content_description">Завантажити</string>
-    <string name="up_content_description">Віддача</string>
+    <string name="up_content_description">Вивантажити</string>
     <string name="current_state">Поточний стан:</string>
     <string name="app_routing_system_apps">Системні програми</string>
-    <string name="app_routing_show_apps">Показати програми %1$s</string>
+    <string name="app_routing_show_apps">Показати %1$s застосунків</string>
     <string name="exit_location_safest">Найбезпечніший</string>
-    <string name="app_routing_hide_apps">Сховати програми %1$s</string>
+    <string name="app_routing_hide_apps">Сховати %1$s застосунків</string>
     <string name="privacy_policy">Політика конфіденційності</string>
     <string name="open_source_licenses">Ліцензії з відкритим кодом</string>
-    <string name="app_icon">Іконка програми</string>
-    <string name="connect_automatically">Підключення автоматично</string>
+    <string name="app_icon">Піктограма застосунку</string>
+    <string name="connect_automatically">Під\'єднуватися автоматично</string>
     <string name="connect_automatically_description">Під\'єднуватися до мережі Tor автоматично під час запуску</string>
-    <string name="advanced">Просунутий</string>
+    <string name="advanced">Розширені</string>
     <string name="about_tor_vpn">Про Tor VPN</string>
-    <string name="default_icon_and_name">Значок і назва за замовчуванням</string>
-    <string name="no_bridge">Не використовуючи мости</string>
+    <string name="default_icon_and_name">Усталена піктограма та назва</string>
+    <string name="no_bridge">Без використання мостів</string>
     <string name="the_internet">Інтернет</string>
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="copied_clipboard">Скопійовано в буфер обміну</string>
     <string name="add_bridge">Додати мости</string>
+    <string name="view_support_docs">Переглянути документи підтримки</string>
+    <string name="app_name_garden">Сад</string>
+    <string name="app_name_weather">Погода</string>
+    <string name="app_name_pingpong">Пінг-понг</string>
+    <string name="about_support_title">Зроблено некомерційною організацією</string>
+    <string name="about_support_description">Ми покладаємося на таких прихильників, як ви, щоб допомогти нам підтримувати надійність та безпеку Tor для мільйонів людей у всьому світі.</string>
+    <string name="about_support_action">Пожертвувати зараз</string>
+    <string name="beta_intro">Ласкаво просимо до бета-версії. Перш ніж розпочати, ось декілька речей, які вам слід знати:</string>
+    <string name="beta_test_thoroughly">Ретельно протестуйте</string>
+    <string name="beta_test_description">Це випуск версії з раннім доступом, призначений для тестування та отримання відгуків.</string>
+    <string name="beta_risks">Знайте ризики</string>
+    <string name="beta_risks_description">Бета-версії можуть призвести до витоку інформації та не повинні використовуватися для конфіденційної діяльності.</string>
+    <string name="how_to_report_bugs">Як повідомляти про помилки</string>
+    <string name="external_link">Зовнішнє посилання</string>
+    <string name="start_testing">Почати тестування</string>
+    <string name="learn_more">Дізнатися більше</string>
+    <string name="beta_report_bugs">Повідомити про помилки</string>
+    <string name="beta_report_bugs_description">Ви можете допомогти, повідомляючи про будь-які знайдені помилки нашим розробникам.</string>
 </resources>
